# donttouch

./: .donttouch.toml  .gitignore  Cargo.toml  README.md  TODO.md  release.toml
.github/workflows/: ci.yml  docs.yml  release.yml
docs/: book.toml
docs/src/: SUMMARY.md  introduction.md
docs/src/concepts/: security-model.md  state-machine.md
docs/src/development/: architecture.md  contributing.md
docs/src/getting-started/: installation.md  quick-start.md
docs/src/guide/: agent-instructions.md  ci.md  configuration.md  git-integration.md  locking.md
docs/src/reference/: cli.md  commands.md  config.md  faq.md  how-it-works.md
docs/src/usage/: agent-instructions.md  commands.md  configuration.md  file-permissions.md  git-integration.md
hooks/: pre-commit
scripts/: books  cf-deploy  minor_patch
site/: package-lock.json
site/src/content/: index.md
site/src/layouts/: Base.astro
site/src/pages/: index.astro
src/: main.rs
