[package]
name = "donttouch"
version = "0.1.7"
edition = "2021"
description = "Add a guard to keep particular files from being modified by AI coding agents and accidental commits"
license = "MIT"
repository = "https://github.com/sksizer/donttouch"
homepage = "https://donttouch.sksizer.com"
readme = "README.md"
keywords = ["ai", "protection", "git", "cli", "coding-agent"]
categories = ["command-line-utilities", "development-tools"]
exclude = ["site/", "docs/", ".github/", "scripts"]

[dependencies]
clap = { version = "4", features = ["derive"] }
glob = "0.3"
toml = "0.8"
serde = { version = "1", features = ["derive"] }
